# UpstreamLib

./: CMakeLists.txt  README.md  fruits-config.cmake  fruits.cpp  fruits.h
cmake/: FruitsConfig.cmake
